working flask environment, missing image locations

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <title>Page Title</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="stylesheet" href="static/styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">  
 </head>
 <body>
@@ -25,6 +27,7 @@
 
             <div class="right-side">
                 <div>
+                    <a href="https://www.linkedin.com/in/quido-kuiper-6b3529116/"><i class="fa fa-linkedin" style="font-size:24px"></i></a>
                     <a href="https://github.com/qkuiper"><i class="fa fa-github" style="font-size:24px"></i></a>
                 </div>
                 
