functional website, apart from retreiving form data

--- a/templates/about.html
+++ b/templates/about.html
@@ -40,7 +40,7 @@
         <div class="content-wrapper">
             <div class="two-column-wrapper">
                 <div class="profile-image-wrapper">
-                    <img src="images/profile.jpg">
+                    <img src="static/images/profile.jpg">
                 </div>
                 
                 <div class="profile-content-wrapper">
@@ -56,19 +56,18 @@
 
                     <div class="profile-skillbars-wrapper">
                         <ul>
-                                <li class="python-skillbar">Python</li>
-                                <li class="sql-skillbar">SQL</li>
-                                <li class="pandas-skillbar">Pandas</li>
-                                <li class="flask-skillbar">Flask</li>
-                                <li class="django-skillbar">Django</li>
-                                <li class="html-skillbar">HTML</li>
-                                <li class="javascript-skillbar">JavaScript</li>
-                            </ul>
-                        </div>
+                            <li class="python-skillbar">Python</li>
+                            <li class="sql-skillbar">SQL</li>
+                            <li class="pandas-skillbar">Pandas</li>
+                            <li class="flask-skillbar">Flask</li>
+                            <li class="django-skillbar">Django</li>
+                            <li class="html-skillbar">HTML</li>
+                            <li class="javascript-skillbar">JavaScript</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
-
     </div>
 </body>
 </html>
