--- a/templates/contact.html
+++ b/templates/contact.html
@@ -72,17 +72,17 @@
                     <h1>Contact Info</h1>
                     <ul class="info">
                         <li>
-                            <span><img src="images/icons/location.png"></span>
+                            <span><img src="static/images/icons/location.png"></span>
                             <span>Dwerguilstraat 1<br>
                                 1826JZ Alkmaar<br>
                                 Netherlands</span>
                         </li>
                         <li>
-                            <span><img src="images/icons/mail.png"></span>
+                            <span><img src="static/images/icons/mail.png"></span>
                             <span>quido.kuiper@gmail.com</span>
                         </li>
                         <li>
-                            <span><img src="images/icons/phone.png"></span>
+                            <span><img src="static/images/icons/phone.png"></span>
                             <span>+31 640213986</span>
                         </li>
                     </ul>
