--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Page Title</title>
+    <title>Quido's Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="stylesheet" href="static/styles.css">
@@ -41,11 +41,11 @@
             <div class="portfolio-items-wrapper">
             
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/portfolio1.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(static/images/portfolio1.jpg)"></div>
 
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
-                            <img src="images/logos/quip.png" alt="">
+                            <img src="static/images/logos/quip.png" alt="">
                         </div>
 
                         <div class="subtitle">
@@ -55,11 +55,11 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/portfolio2.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(static/images/portfolio2.jpg)"></div>
                     
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
-                            <img src="images/logos/devcamp.png" alt="">
+                            <img src="static/images/logos/devcamp.png" alt="">
                         </div>
           
                         <div class="subtitle">
@@ -69,11 +69,11 @@
                 </div>
           
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/portfolio3.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(static/images/portfolio3.jpg)"></div>
                     
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
-                            <img src="images/logos/eventbrite.png" alt="">
+                            <img src="static/images/logos/eventbrite.png" alt="">
                         </div>
           
                         <div class="subtitle">
@@ -84,11 +84,11 @@
                 </div>
           
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/portfolio4.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(static/images/portfolio4.jpg)"></div>
                     
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
-                            <img src="images/logos/shop-hacker.png" alt="">
+                            <img src="static/images/logos/shop-hacker.png" alt="">
                         </div>
           
                         <div class="subtitle">
@@ -99,11 +99,11 @@
                 </div>
           
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/portfolio5.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(static/images/portfolio5.jpg)"></div>
                     
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
-                            <img src="images/logos/crondose.png" alt="">
+                            <img src="static/images/logos/crondose.png" alt="">
                         </div>
           
                         <div class="subtitle">
@@ -113,11 +113,11 @@
                 </div>
           
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/portfolio6.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(static/images/portfolio6.jpg)"></div>
                     
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
-                            <img src="images/logos/dailysmarty.png" alt="">
+                            <img src="static/images/logos/dailysmarty.png" alt="">
                         </div>
           
                         <div class="subtitle">
@@ -127,11 +127,11 @@
                 </div>
           
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/portfolio7.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(static/images/portfolio7.jpg)"></div>
                     
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
-                            <img src="images/logos/dashtrack.png" alt="">
+                            <img src="static/images/logos/dashtrack.png" alt="">
                         </div>
           
                         <div class="subtitle">
@@ -142,11 +142,11 @@
                 </div>
           
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/portfolio8.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(static/images/portfolio8.jpg)"></div>
                     
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
-                            <img src="images/logos/devtrunk.png" alt="">
+                            <img src="static/images/logos/devtrunk.png" alt="">
                         </div>
           
                         <div class="subtitle">
@@ -156,11 +156,11 @@
                 </div>
           
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/portfolio9.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(static/images/portfolio9.jpg)"></div>
                     
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
-                            <img src="images/logos/edutechional.png" alt="">
+                            <img src="static/images/logos/edutechional.png" alt="">
                         </div>
           
                         <div class="subtitle">
@@ -170,11 +170,11 @@
                 </div>
           
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/portfolio10.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(static/images/portfolio10.jpg)"></div>
                     
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
-                            <img src="images/logos/ministry-safe.png" alt="">
+                            <img src="static/images/logos/ministry-safe.png" alt="">
                         </div>
           
                         <div class="subtitle">
@@ -184,11 +184,11 @@
                 </div>
           
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/portfolio11.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(static/images/portfolio11.jpg)"></div>
                     
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
-                            <img src="images/logos/open-devos.png" alt="">
+                            <img src="static/images/logos/open-devos.png" alt="">
                         </div>
           
                         <div class="subtitle">
@@ -198,11 +198,11 @@
                 </div>
           
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/portfolio12.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(static/images/portfolio12.jpg)"></div>
                     
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
-                            <img src="images/logos/toastability.png" alt="">
+                            <img src="static/images/logos/toastability.png" alt="">
                         </div>
           
                         <div class="subtitle">
