Working form, need to add database

--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -39,34 +39,7 @@
 
         <div class="contact-wrapper">
             <div class="contactForm">
-                <h1>Send a Message</h1>
-                <form action="submit_form" method="post">
-                <div class="formBox">
-                    <div class="inputBox w50">
-                        <input type="text" name="first_name" required>
-                        <span>First Name</span>
-                    </div>
-                    <div class="inputBox w50">
-                        <input type="text" name="last_name" required>
-                        <span>Last Name</span>
-                    </div>
-                    <div class="inputBox w50">
-                        <input type="email" name="email" required>
-                        <span>Email Address</span>
-                    </div>
-                    <div class="inputBox w50">
-                        <input type="text" name="subject" required>
-                        <span>Subject</span>
-                    </div>
-                    <div class="inputBox w100">
-                        <textarea name="message" required></textarea>
-                        <span>Write your message here...</span>
-                    </div>
-                    <div class="inputBox w100">
-                        <input type="submit" value="Send">
-                    </div>
-                </div>
-                </form>
+                <h1>Thank you! I will get in touch with you, shortly!</h1>
             </div>
 
             <div class="contactinfo">
