--- a/templates/contact.html
+++ b/templates/contact.html
@@ -51,7 +51,7 @@
                         <span>Last Name</span>
                     </div>
                     <div class="inputBox w50">
-                        <input type="email" name="email" required>
+                        <input type="text" name="email" required>
                         <span>Email Address</span>
                     </div>
                     <div class="inputBox w50">
@@ -59,7 +59,7 @@
                         <span>Subject</span>
                     </div>
                     <div class="inputBox w100">
-                        <textarea name="message" required></textarea>
+                        <textarea type='text'name="message" required></textarea>
                         <span>Write your message here...</span>
                     </div>
                     <div class="inputBox w100">
